[package]
name = "fgift"
version = "0.2.99"
edition = "2021"
authors = ["Sam Schlinkert <sschlinkert@gmail.com>"]
license = "MPL-2.0"
readme = "README.markdown"
repository = "https://github.com/sts10/fgift"

[dependencies]
rand = "0.8.5"
csv = "1.3.0"
clap = { version = "4.4.7", features = ["derive"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
