[package]
name = "fgift"
version = "0.3.8"
edition = "2024"
authors = ["Sam Schlinkert <sschlinkert@gmail.com>"]
license = "MPL-2.0"
readme = "README.markdown"
repository = "https://github.com/sts10/fgift"

[dependencies]
rand = "0.9.0"
csv = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
